--- a/src/app.css
+++ b/src/app.css
@@ -4,13 +4,16 @@
 
 @layer components {
   .custom-ring {
-    @apply focus:outline-none focus-visible:ring focus-visible:ring-onsyellow;
+    @apply focus:outline-none focus-visible:ring focus-visible:ring-ons-sun-yellow;
   }
   .custom-focus {
-    @apply outline-none focus:bg-inherit focus-visible:bg-yellow-300;
+    @apply focus:outline-none focus:bg-inherit focus-visible:bg-ons-sun-yellow;
   }
   .hyperlink {
     @apply text-onsblue underline custom-ring hover:decoration-[3px] group-hover:decoration-[2px];
+  }
+  .hoverable {
+    @apply cursor-pointer;
   }
   .mark {
     @apply bg-yellow-300 font-bold;
