Further work on redesign

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,10 @@
     @apply focus:outline-none focus:bg-inherit focus-visible:bg-ons-sun-yellow;
   }
   .hyperlink {
-    @apply text-onsblue underline custom-ring hover:decoration-[3px] group-hover:decoration-[2px];
+    @apply custom-ring  text-onsblue underline underline-offset-[3px] decoration-[1px] hover:decoration-[3px] group-hover:decoration-[2px];
+  }
+  .hyperlink-reverse {
+    @apply custom-ring text-ons-grey-5 underline underline-offset-[3px] decoration-[1px] hover:decoration-[2px] group-hover:decoration-[2px];
   }
   .hoverable {
     @apply cursor-pointer;
