Add classifications pager

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,9 @@
   .hyperlink {
     @apply custom-ring  text-onsblue underline underline-offset-[3px] decoration-[1px] hover:decoration-[3px] group-hover:decoration-[2px];
   }
+  .hyperlink-without-group-hover {
+    @apply custom-ring  text-onsblue underline underline-offset-[3px] decoration-[1px] hover:decoration-[3px];
+  }
   .hyperlink-reverse {
     @apply custom-ring text-ons-grey-5 underline underline-offset-[3px] decoration-[1px] hover:decoration-[2px] group-hover:decoration-[2px];
   }
