Simplify geotype breadcrumb

--- a/src/app.css
+++ b/src/app.css
@@ -26,8 +26,8 @@
   }
 }
 
-/* @layer base {
-  a {
-    @apply underline;
+@layer utilities {
+  abbr[title].no-underline {
+    text-decoration: none;
   }
-} */
+}
