Add pp explanation link

--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@
     @apply custom-ring  text-onsblue underline underline-offset-[3px] decoration-[1px] hover:decoration-[3px];
   }
   .hyperlink-subdued {
-    @apply custom-ring hover:underline group-hover:underline underline-offset-[3px] decoration-[1px] hover:decoration-[2px] group-hover:decoration-[2px];
+    @apply custom-ring underline underline-offset-[3px] decoration-[1px] hover:decoration-[2px];
   }
   .hyperlink-reverse {
     @apply custom-ring text-ons-grey-15 underline underline-offset-[3px] decoration-[1px] hover:decoration-[2px] group-hover:decoration-[3px];
